Bug 163397 - Some GtkDrawingArea elements lost their background colour (kf5/kf6)
Summary: Some GtkDrawingArea elements lost their background colour (kf5/kf6)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium minor
Assignee: Michael Weghorn
URL:
Whiteboard: target:25.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: KDE, KF5 Qt6
  Show dependency treegraph
 
Reported: 2024-10-12 10:29 UTC by Buovjaga
Modified: 2024-10-15 16:38 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2024-10-12 10:29:40 UTC
1. Open a database file like attachment 194760 [details]
2. Tools - SQL

Observe the background of "Command to execute:" field. It's the same as the surrounding UI panel. It used to be white.

The file is dbaccess/uiconfig/ui/directsqldialog.ui

<object class="GtkDrawingArea" id="sql">

Bibisected with linux-64-25.2 to 9dd26d7a2cc6b314dcc0b52000e0475bb4ced57d
Libreoffice Theme Part 0: Read correct colors from qt based VCL_PLUGINS
Comment 1 Michael Weghorn 2024-10-14 10:30:37 UTC
(In reply to Buovjaga from comment #0)
> Observe the background of "Command to execute:" field. It's the same as the
> surrounding UI panel. It used to be white.
> 
> [...]
> 
> Bibisected with linux-64-25.2 to 9dd26d7a2cc6b314dcc0b52000e0475bb4ced57d
> Libreoffice Theme Part 0: Read correct colors from qt based VCL_PLUGINS

That was already an issue on macOS independent of this commit, but now shows with Qt-based VCL plugins as well.

Pending fix:
https://gerrit.libreoffice.org/c/core/+/174890
Comment 2 Commit Notification 2024-10-15 06:11:09 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8bb38e1b3f1ba1d9c563598d161230fdf27e4685

tdf#163397 svx: Use field color for WeldEditView bg

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Buovjaga 2024-10-15 16:38:22 UTC
Verified, thanks

Arch Linux 64-bit
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a5f45b816e6e26439fa9e6e594b6972b100d13af
CPU threads: 8; OS: Linux 6.10; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 15 October 2024